--- a/styles/vv.css
+++ b/styles/vv.css
@@ -18,7 +18,7 @@ font-size:x-large;
 color:black;
 background-color:#eeeeee;
 }
-.title {
+.date {
 font-family: arial, sans-serif;
 font-style: italic;
 font-size: medium;
